alignment fixes

--- a/micro-meal-planner/src/components/landing-page/landing-page.scss
+++ b/micro-meal-planner/src/components/landing-page/landing-page.scss
@@ -16,6 +16,7 @@
   .main-body-container {
     display: flex;
     margin-top: var(--bs-app-header-height);
+    margin-bottom: var(--bs-app-header-height);
     padding: 2rem;
     transition: margin-left 0.3s ease;
 
